# DEPRECATED-unicens2-binding

./: .gitignore  .gitmodules  0001-Use-libxml2-instead-of-mxml.patch  0002-Use-libxml2-instead-of-mxml.patch  CMakeLists.txt  README.md
conf.d/: config.cmake
conf.d/openapi/: openapi-schema.json
conf.d/packaging/: debian.changelog  debian.control  debian.rules  rpm-.spec  rpm-unicens-agent.spec  unicens-agent.spec
conf.d/templates/cmake/: common.cmake
conf.d/templates/gdb/: gdb-on-target.in
conf.d/templates/rpm/: rpm-config.spec.in
conf.d/templates/ssh/: start-on-target.in
conf.d/wgt/: config.xml.in
conf.d/xds/: xds-config.env
data/: CMakeLists.txt  config.ucsx  config_multichannel_audio_kit.xml
htdocs/: AFB-websock.js  AudioBinding.js  CMakeLists.txt  UNICENS.html  Ucs2Binding.js  index.html  unicens.html
nbproject/: configurations.xml  project.xml
packaging/: debian.changelog  debian.control  debian.rules  debian.unicens-agent-bin.install  unicens-agent.spec  unicens2-binding.dsc
ucs2-afb/: CMakeLists.txt  README.md  ucs_apidef.h  ucs_apidef.json  ucs_apihat.c  ucs_apihat.h  ucs_binding.c  ucs_binding.h
ucs2-interface/: CMakeLists.txt  ucs_api_def.json  ucs_config.h  ucs_interface.h  ucs_lib_interf.c  ucs_vol_interf.c
ucs2-interface/ucs-xml/: UcsXml.c  UcsXml.h  UcsXml_Private.c  UcsXml_Private.h
ucs2-lib/: CMakeLists.txt  LICENSE  README.md
ucs2-lib/_cfg/: ucs_cfg.h  ucs_types_cfg.h  ucs_xrm_cfg.h
ucs2-lib/cfg/: ucs_cfg.h
ucs2-lib/doc/: ucs.chm
ucs2-lib/doc/html/: _p__d_o_c_u__a_p_p_e_n_d_i_x.html  _p__d_o_c_u__a_p_p_e_n_d_i_x.js  _p__u_m__b_a_c_k_c_h_a_n_n_e_l__d_i_a_g.html  _p__u_m__g_e_t_t_i_n_g__s_t_a_r_t_e_d.html  _p__u_m__g_e_t_t_i_n_g__s_t_a_r_t_e_d.js  _p__u_m__h_i_s_t_o_r_y.html  _p__u_m__o_s81118.html  _p__u_m__o_s81118__i_m_g.html  _p__u_m__s_t_a_r_t_e_d__a_m_s.html  _p__u_m__s_t_a_r_t_e_d__c_m_d.html  _p__u_m__s_t_a_r_t_e_d__i_n_i_t.html  _p__u_m__s_t_a_r_t_e_d__l_l_d.html  _p__u_m__s_t_a_r_t_e_d__m_g_r.html  _p__u_m__s_t_a_r_t_e_d__n_e_t.html  _p__u_m__s_t_a_r_t_e_d__n_o_d_e__d_i_s.html  _p__u_m__s_t_a_r_t_e_d__n_o_d_e__s_c_r_i_p_t.html  _p__u_m__s_t_a_r_t_e_d__p_r_e_p.html  _p__u_m__s_t_a_r_t_e_d__p_r_o_g_r_a_m_m_i_n_g.html  _p__u_m__s_t_a_r_t_e_d__r_m.html  _p__u_m__s_t_a_r_t_e_d__s_r_v.html  _p__u_m__s_y_n_c__a_n_d__a_s_y_n_c__r_e_s_u_l_t_s.html  dir_1e869ebbc6cce176ee0dbb76743ac339.html  dir_23d9d109a5b2f4ba089ae8b34b88462d.html  dir_29fd9872dd2074e872f144206a9fa4ae.html  dir_43e3e9ff88bb74457ac2677f9d724a71.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_73cb4d11b06c10448caf49ed02a351c4.html  dir_8f3a2693e968589ea19c320890ad56e9.html  dir_9ace0bdff5d34e41ad08105dc041a781.html  dir_a74bb488207285314d55b30438bec1a4.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_bcbceec62d66502e9836c05663251230.html  dir_da61e3e9a357748887e3ca8d7c5a0c16.html  dir_ed6a9d7cb43517060d7c75c2b818a822.html  dir_f76ab352f358acad35889210ecc2b5d7.html  group___g___u_c_s___a_m_s.html  group___g___u_c_s___a_m_s___t_y_p_e_s.html  group___g___u_c_s___a_m_s___t_y_p_e_s.js  group___g___u_c_s___a_m_s___t_y_p_e_s_ga113edf4cab85ce4e5e13ef257b5b7128.html  group___g___u_c_s___a_m_s___t_y_p_e_s_ga36b630c866dc0c03134f60e98be39f0b.html  (+546 more)
ucs2-lib/doc/html/search/: all_62.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_75.js  enums_75.js  enumvalues_75.js  functions_75.js  groups_62.js  groups_70.js  groups_72.js  pages_62.js  pages_69.js  pages_6c.js  pages_6d.js  pages_6e.js  pages_6f.js  pages_70.js  search.js  typedefs_75.js
ucs2-lib/inc/: ucs_alm.h  ucs_amd.h  ucs_ams.h  ucs_ams_pb.h  ucs_amsallocator.h  ucs_amsmessage.h  ucs_amspool.h  ucs_amtp.h  ucs_api.h  ucs_attach.h  ucs_base.h  ucs_bc_diag.h  ucs_class.h  ucs_class_pb.h  ucs_cmd.h  ucs_cmd_pb.h  ucs_dec.h  ucs_dl.h  ucs_eh.h  ucs_eh_pb.h  ucs_encoder.h  ucs_epm.h  ucs_epm_pv.h  ucs_exc.h  ucs_factory.h  ucs_fsm.h  ucs_gpio.h  ucs_gpio_pb.h  ucs_i2c.h  ucs_i2c_pb.h  ucs_inic.h  ucs_inic_pb.h  ucs_jobs.h  ucs_lld_pb.h  ucs_lldpool.h  ucs_memory.h  ucs_memory_pb.h  ucs_message.h  ucs_message_pb.h  ucs_mgr.h  (+38 more)
ucs2-lib/src/: CMakeLists.txt  ucs_alm.c  ucs_amd.c  ucs_ams.c  ucs_amsmessage.c  ucs_amspool.c  ucs_amtp.c  ucs_attach.c  ucs_base.c  ucs_bc_diag.c  ucs_class.c  ucs_cmd.c  ucs_dec.c  ucs_dl.c  ucs_eh.c  ucs_encoder.c  ucs_epm.c  ucs_exc.c  ucs_factory.c  ucs_fsm.c  ucs_gpio.c  ucs_i2c.c  ucs_inic.c  ucs_inic_res.c  ucs_jobs.c  ucs_lldpool.c  ucs_message.c  ucs_mgr.c  ucs_misc.c  ucs_net.c  ucs_nodedis.c  ucs_nodeobserver.c  ucs_nsm.c  ucs_obs.c  ucs_pmchannel.c  ucs_pmcmd.c  ucs_pmevent.c  ucs_pmfifo.c  ucs_pmfifos.c  ucs_pmp.c  (+14 more)
ucs2-vol/: CMakeLists.txt
ucs2-vol/inc/: callbacks.h  device_container.h  device_value.h  libmostvolume.h  setup.h
ucs2-vol/src/: CMakeLists.txt  callbacks.cpp  device_container.cpp  device_value.cpp  libmostvolume.cpp  setup.cpp
